--- a/extension/popup.html
+++ b/extension/popup.html
@@ -9,30 +9,30 @@
 <body>
   <div class="container">
     <header>
-      <h1>🔴 Channel Highlighter</h1>
-      <p class="subtitle">Highlight YouTube channels in red</p>
+      <h1>⚠️ AI Content Warning</h1>
+      <p class="subtitle">Mark channels that may use AI-generated content</p>
     </header>
 
     <div class="current-channel" id="currentChannel">
       <h2>Current Channel</h2>
       <div id="channelInfo">
-        <p class="info-text">Visit a YouTube channel to highlight it</p>
+        <p class="info-text">Visit a YouTube channel to mark it</p>
       </div>
-      <button id="toggleButton" disabled>Toggle Highlight</button>
+      <button id="toggleButton" disabled>Toggle Warning</button>
     </div>
 
     <div class="highlighted-list">
       <div class="list-header">
-        <h2>Highlighted Channels (<span id="channelCount">0</span>)</h2>
+        <h2>Warned Channels (<span id="channelCount">0</span>)</h2>
         <button id="clearAllBtn" class="clear-btn">Clear All</button>
       </div>
       <div id="channelList" class="channel-list">
-        <p class="info-text">No channels highlighted yet</p>
+        <p class="info-text">No channels marked yet</p>
       </div>
     </div>
 
     <footer>
-      <p class="tip">💡 Tip: Click on any channel link on YouTube, then use this popup to highlight it!</p>
+      <p class="tip">⚠️ Tip: Visit any YouTube channel and mark it to display AI content warnings!</p>
     </footer>
   </div>
 
