--- a/extension/popup.html
+++ b/extension/popup.html
@@ -13,6 +13,24 @@
       <p class="subtitle">Mark channels that may use AI-generated content</p>
     </header>
 
+    <div class="settings-section">
+      <h2>Warning Display Settings</h2>
+      <div class="toggle-group">
+        <label class="toggle-item">
+          <input type="checkbox" id="toggleVideoTitle" checked>
+          <span class="toggle-label">Show warning on video title</span>
+        </label>
+        <label class="toggle-item">
+          <input type="checkbox" id="toggleChannelHeader" checked>
+          <span class="toggle-label">Highlight channel header</span>
+        </label>
+        <label class="toggle-item">
+          <input type="checkbox" id="toggleSidebar" checked>
+          <span class="toggle-label">Show warnings in sidebar videos</span>
+        </label>
+      </div>
+    </div>
+
     <div class="current-channel" id="currentChannel">
       <h2>Current Channel</h2>
       <div id="channelInfo">
