--- a/extension/popup.html
+++ b/extension/popup.html
@@ -28,6 +28,10 @@
           <input type="checkbox" id="toggleSidebar" checked>
           <span class="toggle-label">Show warnings in sidebar videos</span>
         </label>
+        <label class="toggle-item">
+          <input type="checkbox" id="toggleVoting" checked>
+          <span class="toggle-label">Show upvote button on channels</span>
+        </label>
       </div>
     </div>
 
