--- a/extension/popup.html
+++ b/extension/popup.html
@@ -25,13 +25,15 @@
           <span class="toggle-label">Highlight channel header</span>
         </label>
         <label class="toggle-item">
-          <input type="checkbox" id="toggleSidebar" checked>
-          <span class="toggle-label">Show warnings in sidebar videos</span>
-        </label>
-        <label class="toggle-item">
           <input type="checkbox" id="toggleVoting" checked>
           <span class="toggle-label">Show upvote button on channels</span>
         </label>
+        <div class="voting-threshold" id="votingThreshold">
+          <label class="threshold-label">
+            <span>Auto-warn channels at <span id="thresholdValue">10</span> upvotes</span>
+            <input type="range" id="thresholdSlider" min="1" max="1000" value="10" step="1">
+          </label>
+        </div>
       </div>
     </div>
 
