--- a/extension/popup.html
+++ b/extension/popup.html
@@ -41,6 +41,9 @@
             <span>Auto-warn channels at <span id="thresholdValue">10</span> upvotes</span>
             <input type="range" id="thresholdSlider" min="1" max="1000" value="10" step="1">
           </label>
+          <p style="font-size: 11px; color: #888; margin: 8px 0 0 0; padding: 8px; background: #f5f5f5; border-radius: 4px;">
+            ℹ️ <strong>Privacy Notice:</strong> Voting sends channel IDs (public info) to our server. No personal data is collected. See our <a href="https://github.com/orthrauku-dev/yt-sus/blob/main/PRIVACY_POLICY.md" target="_blank" style="color: #1a73e8;">Privacy Policy</a>.
+          </p>
         </div>
       </div>
     </div>
